# shipyard_rapier

./: Cargo.toml  README.md  publish.sh
shipyard_rapier2d/: Cargo.toml
shipyard_rapier2d/examples/: boxes2.rs  contact_filter2.rs  despawn2.rs  events2.rs  joints2.rs  joints_despawn2.rs  locked_rotations2.rs  multiple_colliders2.rs  player_movement2.rs
shipyard_rapier3d/: Cargo.toml
shipyard_rapier3d/examples/: boxes3.rs  contact_filter3.rs  despawn3.rs  events3.rs  joints3.rs  joints_despawn3.rs  locked_rotations3.rs  multiple_colliders3.rs  static_trimesh3.rs
src/: lib.rs
src/physics/: components.rs  mod.rs  resources.rs  systems.rs
src/render/: mod.rs
