[package]
name = "shipyard_rapier2d"
version = "0.0.2"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
description = "An integration with the physics engine rapier, for the shipard ECS."
edition = "2018"
keywords = [ "physics", "dynamics", "rigid",  "joints", "ecs" ]
repository = "https://github.com/lucaspoffo/shipyard_rapier"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "../src/lib.rs"
required-features = [ "dim2" ]

[features]
default = [ "dim2" ]
dim2 = []
render = [ "macroquad" ]
parallel = [ "rapier2d/parallel" ]
simd-stable = [ "rapier2d/simd-stable" ]
simd-nightly = [ "rapier2d/simd-nightly" ]
wasm-bindgen = [ "rapier2d/wasm-bindgen" ]
serde-serialize = [ "rapier2d/serde-serialize" ]
enhanced-determinism = [ "rapier2d/enhanced-determinism" ]

[dependencies]
shipyard = "0.5.0"
rapier2d = "0.6.1"
macroquad = { version = "=0.3.0-alpha.14", features = [ "log-impl" ], optional = true }
concurrent-queue = "1"

[dev-dependencies]
shipyard_rapier2d = { path = ".", features = [ "render" ] }
